--- a/package.json
+++ b/package.json
@@ -56,5 +56,12 @@
     "raw-body": "^2.5.2",
     "request-ip": "^3.3.0",
     "rotating-file-stream": "^3.1.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "jest": "^29.7.0",
+    "superagent": "^9.0.2",
+    "supertest": "^7.0.0"
   }
 }
