--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express-basic-auth": "^1.2.1",
     "express-handlebars": "^6.0.7",
     "express-session": "^1.17.3",
+    "handlebars-helpers": "^0.10.0",
     "joi": "^17.7.1",
     "moment": "^2.29.4",
     "morgan": "~1.9.1",
